tests/invalid/annotation_unresolved_attribute_type/main.py
import provider


def main() -> None:
    x: provider.Missing = 1
